# DynamicObject

./: CMakeLists.txt  README.md
cmake_scripts/: DynamicObjectConfig.cmake.in  create_config_file.cmake  create_config_files.cmake  generate_files_list.cmake  generate_project_files_list.cmake  set_default_properties.cmake
include/: DinamicObject.hpp  DynamicObject.hpp
include/DynamicObject/: DynamicObject.hpp
src/: DinamicObject.cpp  DynamicObject.cpp
tests/: CMakeLists.txt  castsTests.cpp
